# Arch_proj

code/: CMakeLists.txt  Camera.cpp  Camera.hpp  Server.cpp  Server.hpp  main.cpp  robotCommands.cpp  robotCommands.hpp
lib/: libopencv_alphamat.4.7.0.dylib  libopencv_aruco.4.7.0.dylib  libopencv_barcode.4.7.0.dylib  libopencv_bgsegm.4.7.0.dylib  libopencv_bioinspired.4.7.0.dylib  libopencv_calib3d.4.7.0.dylib  libopencv_ccalib.4.7.0.dylib  libopencv_core.4.7.0.dylib  libopencv_datasets.4.7.0.dylib  libopencv_dnn.4.7.0.dylib  libopencv_dnn_objdetect.4.7.0.dylib  libopencv_dnn_superres.4.7.0.dylib  libopencv_dpm.4.7.0.dylib  libopencv_face.4.7.0.dylib  libopencv_features2d.4.7.0.dylib  libopencv_flann.4.7.0.dylib  libopencv_freetype.4.7.0.dylib  libopencv_freetype.407.dylib  libopencv_freetype.dylib  libopencv_fuzzy.4.7.0.dylib  libopencv_hfs.4.7.0.dylib  libopencv_highgui.4.7.0.dylib  libopencv_img_hash.4.7.0.dylib  libopencv_imgcodecs.4.7.0.dylib  libopencv_imgproc.4.7.0.dylib  libopencv_intensity_transform.4.7.0.dylib  libopencv_line_descriptor.4.7.0.dylib  libopencv_mcc.4.7.0.dylib  libopencv_ml.4.7.0.dylib  libopencv_objdetect.4.7.0.dylib  libopencv_optflow.4.7.0.dylib  libopencv_phase_unwrapping.4.7.0.dylib  libopencv_photo.4.7.0.dylib  libopencv_plot.4.7.0.dylib  libopencv_quality.4.7.0.dylib  libopencv_rapid.4.7.0.dylib  libopencv_reg.4.7.0.dylib  libopencv_rgbd.4.7.0.dylib  libopencv_saliency.4.7.0.dylib  libopencv_sfm.4.7.0.dylib  (+19 more)
mosquitto/: INSTALL_RECEIPT.json  homebrew.mosquitto.service  homebrew.mxcl.mosquitto.plist
mosquitto/.brew/: mosquitto.rb
(+5 files in other folders)
